# namaste

./: dev.lkcamp.Namaste.json  meson.build
data/: dev.lkcamp.Namaste.appdata.xml.in  dev.lkcamp.Namaste.desktop.in  dev.lkcamp.Namaste.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  namaste-application.c  namaste-application.h  namaste-window.c  namaste-window.h  namaste-window.ui  namaste.gresource.xml  style.css
